--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
       - run: 
           name: Install nvm
           command: |
+            sudo apt-get install curl
             curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
             echo 'export NVM_DIR=$HOME/.nvm' >> $BASH_ENV
             echo 'source ${NVM_DIR}/nvm.sh' --install >> $BASH_ENV
