--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,12 +15,13 @@ jobs:
       - run: 
           name: Install nvm
           command: |
+            sudo apt-get install curl
             curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
             echo 'export NVM_DIR=$HOME/.nvm' >> $BASH_ENV
             echo 'source ${NVM_DIR}/nvm.sh' --install >> $BASH_ENV
       - run:
           name: Build Node v8 nvm
-          command: nvm install v8.1.2
+          command: nvm install 14.0
       - run: 
           name: Install dependencies
           command: |
