--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,7 @@
 version: 2.1
+orbs:
+  gh-pages: sugarshin/gh-pages@1.0.1
+
 # Define the jobs we want to run for this project
 jobs:
   build-deploy:
@@ -41,9 +44,11 @@ jobs:
       - run:
           name: Run Build
           command: npm run build-prod
-      - deploy:
-          name: Deploy
-          command: ./.build_scripts/deploy.sh
+      - gh-pages/deploy:
+          setup-git: true
+          ssh-fingerprints: 8a:10:e8:70:04:05:dd:d3:c7:3a:6d:56:86:45:64:70
+          branch: fix/deploy_script
+
 # Orchestrate our job run sequence
 workflows:
   version: 2
