Using orb to publish branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,9 @@ jobs:
             sudo apt-get update
             sudo apt-get install git
             sudo apt install g++
-      # - run: 
-      #     name: Before install
-      #     command: chmod +x ./.build_scripts/deploy.sh
+      - run: 
+          name: Before install
+          command: chmod +x ./.build_scripts/deploy.sh
       - run:
           name: Before script
           command: |
@@ -44,7 +44,7 @@ jobs:
       - run:
           name: Run Build
           command: npm run build-prod
-      - gh-pages/fix/deploy:
+      - gh-pages/deploy:
           setup-git: true
           ssh-fingerprints: 8a:10:e8:70:04:05:dd:d3:c7:3a:6d:56:86:45:64:70
           branch: fix/deploy_script
