--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,7 @@ jobs:
           name: Run Build
           command: npm run build-prod
       - gh-pages/deploy:
+          tmp-dir: .deploy
           setup-git: true
           ssh-fingerprints: 8a:10:e8:70:04:05:dd:d3:c7:3a:6d:56:86:45:64:70
           branch: fix/deploy_script
