--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 
 # Define the jobs we want to run for this project
 jobs:
-  build-deploy:
+  test-orb:
     docker:
     # Primary container image where all steps run.
       - image: cimg/ruby:2.7.5-node
@@ -47,8 +47,8 @@ jobs:
           name: Run Build
           command: npm run build-prod
       - run:
-          name: test site
-          command: test-site
+          name: build site
+          command: build-site
           # setup-git: true
           # ssh-fingerprints: 8a:10:e8:70:04:05:dd:d3:c7:3a:6d:56:86:45:64:70
           # branch: fix/deploy_script
@@ -56,6 +56,6 @@ jobs:
 # Orchestrate our job run sequence
 workflows:
   version: 2
-  build_and_deploy:
+  test-orb:
     jobs:
-      - build-deploy
+      - test-orb
